[package]
name = "touch-for-windows"
version = "0.1.2"
edition = "2021"
license = "GPL-3.0-or-later"
description = "A port of touch command from bash to Windows command line"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
dateparser = "0.1.7"
filetime = "0.2.19"
clap = { version = "4.1.1", features = ["derive"] }